# mcp-postgres

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: main.rs  server.rs
src/db/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
